<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/rename_device"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:errorEnabled="true">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/rename_newname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="18"
            android:lines="1"
            android:inputType="text"
            android:hint="@string/input_newname"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rename_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorDarkGray"
            android:text="@string/cancel"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rename_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorSkyBlue"
            android:text="@string/rename"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>