<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.inledco.fluvalsmart.fragment.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/setting_auth_ble"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/setting_auth_ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDarkGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/setting_exit_close_ble"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/setting_exit_close_ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDarkGray"/>

    <LinearLayout
        android:id="@+id/setting_item_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/setting_language"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/setting_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mode_auto"
            android:textColor="@color/colorSkyBlue"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDarkGray"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/setting_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/setting_profile"
        android:textColor="@color/colorBlack"
        android:drawableRight="@mipmap/ic_enter"
        android:textSize="15sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDarkGray"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/setting_um"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/setting_um"
        android:textColor="@color/colorBlack"
        android:drawableRight="@mipmap/ic_enter"
        android:textSize="15sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDarkGray"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/setting_about"
        android:textColor="@color/colorBlack"
        android:drawableRight="@mipmap/ic_enter"
        android:textSize="15sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDarkGray"/>

</LinearLayout>
